1.0.39 - add ai functions
