# src/types/index.ts
@@ -9,3 +9,4 @@ export * from "./error"
 export * from "./asset"
 export * from "./batch"
 export * from "./variant"
+export * from "./claimSet"
